
\name{NEWS}
\title{News for Package \pkg{C50}}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\section{Changes in version 0.1.0-15}{
\itemize{
\item A bug was fixed for factor predictors with many levels. 
}
}