@@ -1,8 +1,8 @@
 Package: C50
 Type: Package
 Title: C5.0 Decision Trees and Rule-Based Models
-Version: 0.1.0-15
-Date: 2013-05-26
+Version: 0.1.0-16
+Date: 2016-02-03
 Author: Max Kuhn, Steve Weston, Nathan Coulter. C code for C5.0 by R. Quinlan 
 Maintainer: Max Kuhn <mxkuhn@gmail.com>
 Description: C5.0 decision trees and rule-based models for pattern recognition
