@@ -3,6 +3,12 @@
 \title{News for Package \pkg{C50}}
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
+\section{Changes in version 0.1.0-16}{
+\itemize{
+\item Case weights were added to \code{C5.0.default}. 
+}
+}
+
 \section{Changes in version 0.1.0-15}{
 \itemize{
 \item A bug was fixed for factor predictors with many levels. 
